# garagem-2.0

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
garagem/: admin.py  models.py  serializers.py  views.py
garagem/migrations/: 0001_initial.py  0002_editora.py  0002_veiculo_capa.py  0003_marca.py  0004_acessorio_cor_veiculo_delete_editora_and_more.py  0005_alter_veiculo_categoria_alter_veiculo_cor_and_more.py  0006_alter_acessorio_options_alter_veiculo_options_and_more.py
garagem/models/: __init__.py  acessorio.py  categoria.py  cor.py
garagem/serializers/: modelo.py  veiculo.py
garagem/views/: marca.py  veiculo.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
