[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Vencce", email = "Vitor.Ferreira.sbs@gmail.com"},
]
dependencies = [
    "django>=4.1.7",
    "djangorestframework>=3.14.0",
    "setuptools>=68.1.2",
    "python-magic>=0.4.27",
    "Pillow>=10.0.0",
    "django-extensions>=3.2.3",
    "pydotplus>=2.0.2",
]
requires-python = ">=3.9"
license = {text = "MIT"}
